fix(v3.4.0): DataModel.get 3-arg signature + Java 8 Files.readAllBytes
CI caught two Java 8 / URCap API compat issues in the v3.4.0 commit:

1. DataModel.get requires (key, default, class) signature — my one-arg
   Object overload doesn't exist in the URCap API stub the repo builds
   against. Switched to model.get(key, dflt, String.class).

2. Files.readString(Path, Charset) is Java 11+. UR e-Series PS5 ships
   Java 8 runtime and the Maven build enforces source/target 8. Switched
   to new String(Files.readAllBytes(p), UTF_8) which is Java 1.7+.

Both in helpers at the tail end of VncInstallationNodeContribution that
feed the claim payload (robot_serial, lan_ip, hostname).